--- a/css/style.css
+++ b/css/style.css
@@ -160,79 +160,7 @@ Main content
   -moz-transition: -moz-transform 0.5s 0.4s;
   transition: transform 0.5s 0.4s;
 }
-/*
-.cd-main.fold-is-open > * {
-   on mobile - translate .cd-main content to the right when the .cd-folding-panel is open 
-  -webkit-transform: translateX(100%);
-  -moz-transform: translateX(100%);
-  -ms-transform: translateX(100%);
-  -o-transform: translateX(100%);
-  transform: translateX(100%);
-  -webkit-transition: -webkit-transform 0.5s 0s;
-  -moz-transition: -moz-transform 0.5s 0s;
-  transition: transform 0.5s 0s;
-}
-*/
-/*
-@media only screen and (min-width: 600px) {
-  .cd-main.fold-is-open > * {
-    -webkit-transform: translateX(600px);
-    -moz-transform: translateX(600px);
-    -ms-transform: translateX(600px);
-    -o-transform: translateX(600px);
-    transform: translateX(600px);
-  }
-}
-*/
-/*
-@media only screen and (min-width: 1100px) {
-  .cd-main::before {
-    content: 'desktop';
-  }
-  .cd-main.fold-is-open > * {
-    -webkit-transform: translateX(0);
-    -moz-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-*/
 
-/*
-.cd-gallery::after {
-  clear: both;
-  content: "";
-  display: table;
-}
-*/
-/*
-.cd-gallery::before {
-  display: block;
-  content: '';
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(28, 23, 38, 0.6);
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: opacity 0.5s 0.4s, visibility 0s 0.9s;
-  -moz-transition: opacity 0.5s 0.4s, visibility 0s 0.9s;
-  transition: opacity 0.5s 0.4s, visibility 0s 0.9s;
-}
-*/
-/*
-.fold-is-open .cd-gallery::before {
-  visibility: visible;
-  opacity: 1;
-  -webkit-transition: opacity 0.5s 0s, visibility 0s 0s;
-  -moz-transition: opacity 0.5s 0s, visibility 0s 0s;
-  transition: opacity 0.5s 0s, visibility 0s 0s;
-}
-*/
 
 .cd-item {
   width: 100%;
@@ -274,22 +202,22 @@ Main content
   vertical-align: middle;
 }
 .cd-item:nth-of-type(1) {
-  background-color: #c7ddf5; <!--#63b8ff;-->
+  background-color: #619DE5 ; <!--#c7ddf5;-->
 }
 .cd-item:nth-of-type(2) {
-  background-color: #9aceff; <!--8ee5ee;-->
+  background-color: #5BC3C8 ; <!--8ee5ee;-->
 }
 .cd-item:nth-of-type(3) {
-  background-color: #79CBFB;
+  background-color: #337C99 ;
 }
 .cd-item:nth-of-type(4) {
-  background-color: #4EBBFB;<!--4f94cd;-->
+  background-color: #90D0A0 ;<!--4f94cd;-->
 }
 .cd-item:nth-of-type(5) {
-    background-color: #669acc;
+    background-color: #7B89DB ;
 }
 .cd-item:nth-of-type(6) {
-  background-color: #336799;<!--162955;-->
+  background-color: #284E8A ;<!--162955;-->
 }
 .cd-item h2 {
   font-size: 2.2rem;
