--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Open Sans", sans-serif;
-  color: #363558;
+  color: #201A51;
   background-color: #f6f6f6;
 }
 
@@ -51,7 +51,7 @@ header {
 }
 header h1 {
   font-size: 2.2rem;
-  color: #363558;
+  color: #201A51;
 }
 
 header p {
@@ -81,7 +81,7 @@ p.title {
     position:absolute;
     overflow: hidden;
     word-wrap:break-word;
-    color:#1c1726;
+    color:#201A51;
     
 }
 .centered {
@@ -166,19 +166,6 @@ Main content
   width: 100%;
   height: 300px;
   text-align: center;
-  /* Force Hardware Acceleration */
-/*
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transition: -webkit-transform 0.5s 0.4s;
-  -moz-transition: -moz-transform 0.5s 0.4s;
-  transition: transform 0.5s 0.4s;
-*/
 }
 .cd-item > a {
   display: table;
@@ -189,14 +176,6 @@ Main content
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/*
-.cd-item > a.dark-text {
-  color: #363558;
-}
-.cd-item > a.dark-text b {
-  border-color: #363558;
-}
-*/
 .cd-item div {
   display: table-cell;
   vertical-align: middle;
@@ -295,354 +274,7 @@ Main content
     -moz-transition: opacity 0.3s 0.1s, -moz-transform 0.3s 0.1s;
     transition: opacity 0.3s 0.1s, transform 0.3s 0.1s;
   }
-/*
-  .fold-is-open .cd-item {
-    -webkit-transition: -webkit-transform 0.5s 0s;
-    -moz-transition: -moz-transform 0.5s 0s;
-    transition: transform 0.5s 0s;
-    -webkit-transform: translateX(-400px);
-    -moz-transform: translateX(-400px);
-    -ms-transform: translateX(-400px);
-    -o-transform: translateX(-400px);
-    transform: translateX(-400px);
-  }
-  .fold-is-open .cd-item:nth-of-type(2n) {
-    -webkit-transform: translateX(400px);
-    -moz-transform: translateX(400px);
-    -ms-transform: translateX(400px);
-    -o-transform: translateX(400px);
-    transform: translateX(400px);
-  }
-*/
 }
-
-/* -------------------------------- 
-
-folding panel
-
--------------------------------- 
-.cd-folding-panel {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  visibility: hidden;
-  overflow: hidden;
-  -webkit-transition: visibility 0s 0.9s;
-  -moz-transition: visibility 0s 0.9s;
-  transition: visibility 0s 0.9s;
-}
-.cd-folding-panel .fold-left,
-.cd-folding-panel .fold-right {       */
-  /* the :after elements of .fold-left and .fold-right are the 2 fold sides */ /*
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  position: relative;    */
-  /* enable a 3D-space for children elements */  /*
-  -webkit-perspective: 2000px;
-  -moz-perspective: 2000px;
-  perspective: 2000px;
-}
-.cd-folding-panel .fold-left::after,
-.cd-folding-panel .fold-right::after {    */
-  /* 2 fold sides */   /*
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transition: -webkit-transform 0.5s 0.4s, background-color 0.5s 0.4s;
-  -moz-transition: -moz-transform 0.5s 0.4s, background-color 0.5s 0.4s;
-  transition: transform 0.5s 0.4s, background-color 0.5s 0.4s;
-}
-.cd-folding-panel .fold-right {
-  -webkit-perspective-origin: 0% 50%;
-  -moz-perspective-origin: 0% 50%;
-  perspective-origin: 0% 50%;
-}
-.cd-folding-panel .fold-right::after {
-  -webkit-transform-origin: right center;
-  -moz-transform-origin: right center;
-  -ms-transform-origin: right center;
-  -o-transform-origin: right center;
-  transform-origin: right center;
-  -webkit-transform: translateX(-100%) rotateY(-90deg);
-  -moz-transform: translateX(-100%) rotateY(-90deg);
-  -ms-transform: translateX(-100%) rotateY(-90deg);
-  -o-transform: translateX(-100%) rotateY(-90deg);
-  transform: translateX(-100%) rotateY(-90deg);
-  background-color: #c0c3c3;
-}
-.cd-folding-panel .fold-left {
-  display: none;
-}
-.cd-folding-panel .fold-left::after {
-  background-color: #f9fafa;
-}
-.cd-folding-panel .cd-close {
-  position: absolute;
-  z-index: 1;
-  display: inline-block;
-  top: 10px;
-  right: 10px;
-  height: 44px;
-  width: 44px;      */
-  /* image replacement */  /*
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
-  opacity: 0;
-  -webkit-transition: opacity 0.2s 0s;
-  -moz-transition: opacity 0.2s 0s;
-  transition: opacity 0.2s 0s;
-}
-.cd-folding-panel .cd-close::after, .cd-folding-panel .cd-close::before {
-  content: '';
-  position: absolute;
-  height: 3px;
-  width: 32px;
-  left: 50%;
-  top: 50%;
-  background-color: #544173;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-}
-.cd-folding-panel .cd-close::after {
-  -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-  -moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-  -ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-  -o-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-  transform: translateX(-50%) translateY(-50%) rotate(45deg);
-}
-.cd-folding-panel .cd-close::before {
-  -webkit-transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-  -moz-transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-  -ms-transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-  -o-transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-  transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-}
-.cd-folding-panel.is-open {
-  visibility: visible;
-  -webkit-transition: visibility 0s 0s;
-  -moz-transition: visibility 0s 0s;
-  transition: visibility 0s 0s;
-}
-.cd-folding-panel.is-open .fold-right::after,
-.cd-folding-panel.is-open .fold-left::after {
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-  -webkit-transition: -webkit-transform 0.5s 0s, background-color 0.5s 0s;
-  -moz-transition: -moz-transform 0.5s 0s, background-color 0.5s 0s;
-  transition: transform 0.5s 0s, background-color 0.5s 0s;
-}
-.cd-folding-panel.is-open .fold-right::after {
-  background-color: #f9fafa;
-}
-.cd-folding-panel.is-open .cd-close {
-  opacity: 1;
-  -webkit-transition: opacity 0.2s 0.5s;
-  -moz-transition: opacity 0.2s 0.5s;
-  transition: opacity 0.2s 0.5s;
-}
-@media only screen and (min-width: 600px) {
-  .cd-folding-panel {
-    width: 600px;
-  }
-}
-@media only screen and (min-width: 1100px) {
-  .cd-folding-panel {
-    left: 50%;
-    right: auto;
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
-    transform: translateX(-50%);
-    width: 800px;
-  }
-  .cd-folding-panel .fold-left,
-  .cd-folding-panel .fold-right {
-    width: 50%;
-    float: left;
-    height: 100%;
-  }
-  .cd-folding-panel .fold-right {     */
-    /* change perspective-origin so that the 2 fold sides have the same vanishing point */  /*
-    -webkit-perspective-origin: 0% 50%;
-    -moz-perspective-origin: 0% 50%;
-    perspective-origin: 0% 50%;
-  }
-  .cd-folding-panel .fold-right::after {
-    -webkit-transform-origin: right center;
-    -moz-transform-origin: right center;
-    -ms-transform-origin: right center;
-    -o-transform-origin: right center;
-    transform-origin: right center;
-    -webkit-transform: translateX(-100%) rotateY(-90deg);
-    -moz-transform: translateX(-100%) rotateY(-90deg);
-    -ms-transform: translateX(-100%) rotateY(-90deg);
-    -o-transform: translateX(-100%) rotateY(-90deg);
-    transform: translateX(-100%) rotateY(-90deg);
-  }
-  .cd-folding-panel .fold-left {
-    display: block;
-    -webkit-perspective-origin: 100% 50%;
-    -moz-perspective-origin: 100% 50%;
-    perspective-origin: 100% 50%;
-  }
-  .cd-folding-panel .fold-left::after {
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -ms-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-    -webkit-transform: translateX(100%) rotateY(90deg);
-    -moz-transform: translateX(100%) rotateY(90deg);
-    -ms-transform: translateX(100%) rotateY(90deg);
-    -o-transform: translateX(100%) rotateY(90deg);
-    transform: translateX(100%) rotateY(90deg);
-  }
-}
-
-.cd-fold-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  padding: 4em 2em;
-  visibility: hidden;
-  -webkit-transition: visibility 0s 0.4s;
-  -moz-transition: visibility 0s 0.4s;
-  transition: visibility 0s 0.4s;
-}
-.cd-fold-content > * {
-  opacity: 0;
-  -webkit-transform: translateY(20px);
-  -moz-transform: translateY(20px);
-  -ms-transform: translateY(20px);
-  -o-transform: translateY(20px);
-  transform: translateY(20px);
-}
-.cd-fold-content h2 {
-  font-size: 2.4rem;
-  -webkit-transition: -webkit-transform 0.2s 0.2s, opacity 0.2s 0.2s;
-  -moz-transition: -moz-transform 0.2s 0.2s, opacity 0.2s 0.2s;
-  transition: transform 0.2s 0.2s, opacity 0.2s 0.2s;
-}
-.cd-fold-content p, .cd-fold-content em {
-  line-height: 1.6;
-}
-.cd-fold-content em {
-  display: inline-block;
-  margin: 1em 0;
-  font-family: "Vollkorn", serif;
-  font-size: 1.8rem;
-  color: #7a78ae;
-  -webkit-transition: -webkit-transform 0.2s 0.1s, opacity 0.2s 0.1s;
-  -moz-transition: -moz-transform 0.2s 0.1s, opacity 0.2s 0.1s;
-  transition: transform 0.2s 0.1s, opacity 0.2s 0.1s;
-}
-.cd-fold-content p {
-  margin-bottom: 1em;
-  font-size: 1.4rem;
-  -webkit-transition: -webkit-transform 0.2s 0s, opacity 0.2s 0s;
-  -moz-transition: -moz-transform 0.2s 0s, opacity 0.2s 0s;
-  transition: transform 0.2s 0s, opacity 0.2s 0s;
-}
-.is-open .cd-fold-content {
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  visibility: visible;
-  -webkit-transition: visibility 0s 0.5s;
-  -moz-transition: visibility 0s 0.5s;
-  transition: visibility 0s 0.5s;
-}
-.is-open .cd-fold-content > * {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
-  transform: translateY(0);
-}
-.is-open .cd-fold-content h2 {
-  -webkit-transition: -webkit-transform 0.2s 0.5s, opacity 0.2s 0.5s;
-  -moz-transition: -moz-transform 0.2s 0.5s, opacity 0.2s 0.5s;
-  transition: transform 0.2s 0.5s, opacity 0.2s 0.5s;
-}
-.is-open .cd-fold-content em {
-  -webkit-transition: -webkit-transform 0.2s 0.6s, opacity 0.2s 0.6s;
-  -moz-transition: -moz-transform 0.2s 0.6s, opacity 0.2s 0.6s;
-  transition: transform 0.2s 0.6s, opacity 0.2s 0.6s;
-}
-.is-open .cd-fold-content p {
-  -webkit-transition: -webkit-transform 0.2s 0.7s, opacity 0.2s 0.7s;
-  -moz-transition: -moz-transform 0.2s 0.7s, opacity 0.2s 0.7s;
-  transition: transform 0.2s 0.7s, opacity 0.2s 0.7s;
-}
-@media only screen and (min-width: 600px) {
-  .cd-fold-content h2 {
-    font-size: 3.2rem;
-  }
-}
-@media only screen and (min-width: 1100px) {
-  .cd-fold-content {
-    padding: 4em;
-  }
-  .cd-fold-content > * {
-    -webkit-transform: translateY(40px);
-    -moz-transform: translateY(40px);
-    -ms-transform: translateY(40px);
-    -o-transform: translateY(40px);
-    transform: translateY(40px);
-  }
-  .cd-fold-content em {
-    font-size: 2.2rem;
-  }
-  .cd-fold-content p {
-    font-size: 1.6rem;
-  }
-}
- */
-/* -------------------------------- 
-
-Javascript disabled
-
--------------------------------- */
-/*
-.no-js .cd-fold-content.single-page {
-  position: static;
-  visibility: visible;
-  height: auto;
-  background-color: #dadcdc;
-}
-.no-js .cd-fold-content.single-page > * {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
-  transform: translateY(0);
-}
-*/
 
 /* css for custom nav */
 
@@ -681,7 +313,7 @@ Javascript disabled
 
 .cbp-af-header h1 {
 	text-transform: uppercase;
-	color: #333;
+	color: #201A51;
 	letter-spacing: 4px;
 	font-size: 4em;
 	margin: 0;
@@ -700,7 +332,7 @@ Javascript disabled
 }
 
 .cbp-af-header nav a:hover {
-	color: #333;
+	color: #201A51;
 }
 
 /* Transitions and class for reduced height */
