--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,16 @@ header p {
 }
 
 p.title {
-    margin: 0;
-	padding: 1em 0;
+/*    margin: 0;*/
+/*	padding: 1em 0;*/
 	font-size: 1.8em;
 	line-height: 1.5;
     
     font-family: "Vollkorn", serif;
+/*
     width: 100%;
     height: 100%;
+*/
     position:absolute;
     overflow: hidden;
     word-wrap:break-word;
@@ -87,13 +89,17 @@ p.title {
 .centered {
   position: absolute;
   overflow: hidden;
-  margin:auto;
+  padding:0 20%;
   top:300px;
+/*
   left: 100px;
   right: 100px;
+*/
   height:400px;
-/*  width:80%;*/
-  width:500px;
+  width:80%;
+  margin:auto;
+/*  padding: 10%;*/
+/*  width:500px;*/
   z-index: 999;
   word-wrap: break-word;
 }
