--- a/css/component.css
+++ b/css/component.css
@@ -126,3 +126,16 @@
 		line-height: 1;
 	}
 }
+@media screen and (max-width: 480px) {
+	.cbp-af-header nav a,
+	.cbp-af-header.cbp-af-header-shrink nav a {
+		line-height: 1;
+        font-size: 0.8em;
+	}
+    .cbp-af-header.cbp-af-header-shrink h1 {
+		font-size: 0.8em;
+	}
+    .cbp-af-inner h1 {
+		font-size: 1em;
+  }
+}
