--- a/css/style.css
+++ b/css/style.css
@@ -70,16 +70,9 @@ header p {
 }
 
 p.title {
-/*    margin: 0;*/
-/*	padding: 1em 0;*/
 	font-size: 1.5em;
-	line-height: 1.5;
-    
+	line-height: 1.5;  
     font-family: "Vollkorn", serif;
-/*
-    width: 100%;
-    height: 100%;
-*/
     position:absolute;
     overflow: hidden;
     word-wrap:break-word;
@@ -419,6 +412,10 @@ Main content
 @media only screen and (max-width: 480px) {
   p.title {
     font-size: 1.3em;
+  }
+  .centered {
+      width:95%;
+      padding:0 2.5%;
   }
 /*
   .cbp-af-header.cbp-af-header-shrink nav a {
