--- a/css/component.css
+++ b/css/component.css
@@ -126,11 +126,11 @@
 		line-height: 1;
 	}
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 568px) {
 	.cbp-af-header nav a,
 	.cbp-af-header.cbp-af-header-shrink nav a {
 		line-height: 1;
-        font-size: 1em;
+        font-size: .75em;
 	}
     .cbp-af-header.cbp-af-header-shrink h1 {
 		font-size: 0.8em;
