--- a/css/footer-distributed-with-contact-form.css
+++ b/css/footer-distributed-with-contact-form.css
@@ -62,7 +62,7 @@
 	width: 120px;
 	height: 35px;
 	cursor: pointer;
-	background-color:  #8f9296;
+	background-color:  #619DE5;
 	border-radius: 2px;
 
 	font-size: 20px;
