--- a/css/footer-distributed-with-contact-form.css
+++ b/css/footer-distributed-with-contact-form.css
@@ -1,6 +1,5 @@
 .footer-distributed{
 	background-color: #201A51;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	font: bold 16px sans-serif;
@@ -8,6 +7,7 @@
 
 	padding: 50px 60px 40px;
 	margin-top: 0px;
+    margin-bottom: 0px;
 	overflow: hidden;
 }
 
@@ -64,6 +64,7 @@
 	cursor: pointer;
 	background-color:  #619DE5;
 	border-radius: 2px;
+    text-decoration: none;
 
 	font-size: 20px;
 	color: #ffffff;
