updated, made simpler

--- a/css/footer-distributed-with-contact-form.css
+++ b/css/footer-distributed-with-contact-form.css
@@ -1,5 +1,5 @@
 .footer-distributed{
-	background-color: #201A51;
+	background-color: #f6f6f6;
 	box-sizing: border-box;
 	width: 100%;
 	font: bold 16px sans-serif;
