--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Open Sans", sans-serif;
-  color: #201A51;
+  color: #f6f6f6;
   background-color: #f6f6f6;
 }
 h1, h2, p {
