--- a/css/style.css
+++ b/css/style.css
@@ -65,22 +65,21 @@ p.title {
 	font-size: 1.5em;
 	line-height: 1.5;  
     font-family: "Vollkorn", serif;
-    position:absolute;
+    /*position:absolute;*/
     overflow: hidden;
     word-wrap:break-word;
     color:#201A51;
     
 }
 .centered {
-  position: absolute;
-  overflow: hidden;
-  padding:0 20%;
-  top:300px;
-  height:400px;
-  width:80%;
-  margin:auto;
-  z-index: 999;
-  word-wrap: break-word;
+  position:absolute;
+   width:80%;
+   height:40%;
+   z-index:15;
+   top:75%;
+   left:20%;
+   margin:-20% 10% 0 -10%;
+   word-wrap: break-word;
 }
 #picture {
   width: 200px;
