--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,11 @@ p.title {
 .centered {
   position:absolute;
    width:80%;
-   height:300px;
+   height:20%;
    z-index:15;
-   top:500px;
+   top:40%;
    left:20%;
-   margin:-20% 10% 0 -10%;
+   margin:0% 10% 0 -10%;
    word-wrap: break-word;
 }
 #picture {
